# kite

./: .gitignore  CMakeLists.txt  README.md  kite.wings  octave-workspace  sdkconfig
.github/workflows/: kite.yml
main/: CMakeLists.txt  Config.cpp  Config.h  RC.c  RC_for_config (copy).c  RC_for_config.c  config.cpp  config.h  flight_data_2021_mar_22.ods  main.c  main.cpp  num_config_vars.h  test.html  testEscaped.html  webgl.html
main/control/: CMakeLists.txt  EightController.cpp  EightController.h  FlightController.cpp  FlightController.h  HoverController.cpp  HoverController.h  LandingController.cpp  LandingController.h  ManualController.cpp  ManualController.h  Position.cpp  Position.h  StateMachine.cpp  StateMachine.h  actuator.c  actuator.h  autopilot.c  autopilot.h  controlData.c  controlData.h  elevator_d.c  figure-eight.c  hover.c  landing.c  position.cpp  position.h  rotation_matrix.c  rotation_matrix.cpp  rotation_matrix.h  sensorData.c  sensorData.h
main/data/: CMakeLists.txt  FlyData.cpp  FlyData.h  flydata.cpp  flydata.h
main/helpers/: CMakeLists.txt  Matrix3.cpp  Matrix3.h  Timer.cpp  Timer.h  Vector3.cpp  Vector3.h  Wifi.cpp  Wifi.h  kitemath.c  kitemath.cpp  kitemath.h  math.c  math.h  rotation_matrix.c  rotation_matrix.h  timer.c  timer.cpp  timer.h  wifi.cpp  wifi.h
main/i2c/: Bmp280.cpp  Bmp280.h  Bmp280Driver.cpp  Bmp280Driver.h  CMakeLists.txt  Cat24c256.cpp  Cat24c256.h  I2cDevice.cpp  Mpu6050.cpp  Mpu6050.h  bmp280.c  bmp280.cpp  bmp280.h  bmp280_driver.cpp  bmp280_driver.h  cat24c256.c  cat24c256.cpp  cat24c256.h  i2c_device.cpp  i2c_device.h  i2cdevice.cpp  i2cdevice.h  interchip.c  interchip.cpp  interchip.h  mpu6050.c  mpu6050.cpp  mpu6050.h
main/i2c_devices/: CMakeLists.txt  bmp280.c  bmp280.h  interchip.c  interchip.h  mpu6050.c  mpu6050.h
main/pwm/: CMakeLists.txt  Motor.cpp  Motor.h  ServoMotor.cpp  ServoMotor.h  motor.cpp  motor.h  motors.c  motors.cpp  motors.h  pwm_input.c  pwm_input.cpp  pwm_input.h
main/structures/: CMakeLists.txt  DataMatrix3.cpp  DataMatrix3.h  DataVector3.cpp  DataVector3.h  Matrix3.cpp  Matrix3.h  Vector3.cpp  Vector3.h
